...
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".View.InputFragment"
    android:id="@+id/fragment_input"
    android:layout_margin="70dp"
    android:background="@color/background">


    <TextView
        android:id="@+id/edit_title"
...
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="18dp"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/edit_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/item_name"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_item_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:digits="0123456789.,"
        android:fontFamily="monospace"
        android:hint="@string/item_value"
...
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/yyyy_mm_dd"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_item_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/item_make"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_item_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/model"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_serialno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/serial_number"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/description"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/comment"
        android:paddingStart="10dp"
...
