...
    <ImageButton
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40sp"
        android:id="@+id/capture_btn"
        android:src="@drawable/round_camera_24"
        android:scaleType="centerCrop"
        app:tint="#fff"
        android:visibility="visible"
        android:background="?attr/selectableItemBackgroundBorderless"/>
    <ImageButton
...
        android:src="@drawable/round_flip_camera_android_24"
        android:visibility="visible"
        app:tint="#fff" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/ok_btn"
        android:text="OK"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        >
    </Button>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/retry_btn"
        android:text="Retry"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        >
    </Button>
...
